--- a/WebCommandLine/Resources/webcli.css
+++ b/WebCommandLine/Resources/webcli.css
@@ -21,6 +21,15 @@
     width: 100% !important;
 }
 
+.resize-handle {
+    width: 100%;
+    height: 5px;
+    background: rgba(0, 0, 0, .2);
+    cursor: ns-resize;
+    position: fixed;
+    z-index: 2001;
+}
+
 /*Input
 -----------------------------------------------------*/
 .webcli-input {
